# pylon_identity

./: .coverage  .env.development  .env.production  .env.staging  .env.test  .fernet_key  .gitignore  Insomnia_2024-05-05.json  README.md  database.db  meudb.sql  migrations.sql  pyproject.toml
deploy/: dockerfile
migrations/: env.py
migrations/versions/: 3d5df7171b66_create_task.py  3ffb3ba0e35c_users.py  49e6183425c3_add_view_user_permissions.py  608e1fabc776_create_tables_users_roles_aplications_.py  69382a0c5998_add_unique_constraint_to_roles.py  8f36ed25393d_add_unique_constraint_to_users.py  b05b6e3557e8_create_action_table.py  d3ededb8ce83_create_role_action.py
pylon_identity/: app.py  main.py
pylon_identity/api/admin/: dependencies.py
pylon_identity/api/admin/controllers/: __init__.py  application_controller.py  auth_controller.py  role_controller.py  task_controller.py  user_controller.py
pylon_identity/api/admin/models/: __init__.py  models.py
pylon_identity/api/admin/routes/: application_routes.py  role_routes.py  routes.py  task_routes.py  user_routes.py
pylon_identity/api/admin/schemas/: action_schema.py  application_schema.py  role_schema.py  task_schema.py  token_schema.py  user_schema.py
pylon_identity/api/admin/services/: __init__.py  application_service.py  role_service.py  task_service.py  (+1 more)
pylon_identity/api/controllers/: application_controller.py  auth_controller.py  role_controller.py  user_controller.py
pylon_identity/api/models/: __init__.py  models.py
pylon_identity/api/routes/: application_routes.py  auth_routes.py  role_routes.py  routes.py  user_routes.py
pylon_identity/api/schemas/: application_schema.py  role_schema.py  user_schema.py
pylon_identity/api/services/: application_service.py  role_service.py  user_service.py
pylon_identity/config/: dependencies.py  middlewares.py  routes.py  security.py
tests/: app_test.py  application_routes_test.py  conftest.py  role_routes_test.py  task_routes_test.py  test_security.py  user_routes_test.py
(+4 files in other folders)
